src/objects/WGULicenseRequirement__c.object
<CustomObject>
    <description>License Requirement</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSID__c</fullName>
        <description>pams id for the license requirement table</description>
        <externalId>true</externalId>
        <label>PAMS ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAMSLicenseID__c</fullName>
        <description>id for the related license</description>
        <label>PAMS License ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAMSrequirementID__c</fullName>
        <description>id for the pams requirement table.</description>
        <externalId>true</externalId>
        <label>PAMS requirement  ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The title of the program</description>
        <label>Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUFEToDo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Field experience  TODO.</description>
        <label>WGU FE ToDo</label>
        <referenceTo>WGUFEToDo__c</referenceTo>
        <relationshipLabel>WGU License Requirements</relationshipLabel>
        <relationshipName>WGU_License_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUStateLicensure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>state license that this requirement is linked to.</description>
        <label>WGU State Licensure</label>
        <referenceTo>WGUStateLicensure__c</referenceTo>
        <relationshipLabel>WGU License Requirements</relationshipLabel>
        <relationshipName>WGULicenseRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>Description of the requirment</description>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this is an active record.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>requirementcode__c</fullName>
        <description>code for the requirement</description>
        <label>requirement code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>studentcost__c</fullName>
        <description>cost for the student</description>
        <label>student cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <description>URL of the requirment</description>
        <label>url</label>
        <type>Url</type>
    </fields>
    <label>WGU License Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGU License Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU License Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>